:add aapp.py and flask framework

--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
         <div class="container">
             <form id="aesthetic-form"></form>
             <div class="mb-3">
-                <label for="exampleFormControlInput1" class="form-label">Name</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-                <label for="exampleFormControlInput1" class="form-label">Email address</label>
-                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <label for="name" class="form-label">Name</label>
+                <input type="email" class="form-control" id="name" placeholder="name@example.com">
+                <label for="email" class="form-label">Email address</label>
+                <input type="email" class="form-control" id="email" placeholder="name@example.com">
               </div>
               <div class="mb-3">
-                <label for="exampleFormControlTextarea1" class="form-label">Example textarea</label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <label for="message" class="form-label">Example textarea</label>
+                <textarea class="form-control" id="message" rows="3"></textarea>
               </div>
             
             </form>
