change name of classes in index to style submit

--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                 <input type="email" class="form-control" id="email" placeholder="name@example.com">
               </div>
               <div class="mb-3">
-                <label for="message" class="form-label">Example textarea</label>
+                <label for="message" class="form-label">Your Inquiry</label>
                 <textarea class="form-control" id="message" rows="3"></textarea>
+                <button class="btn btn-primary" type="submit">Submit</button>
               </div>
             
             </form>
